--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -34,3 +34,24 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  debug-apk:
+        name: Generate Debug APK
+        needs: [ static-code-analysis ]
+        runs-on: ubuntu-latest
+        steps:
+          - name: Checkout the code
+            uses: actions/checkout@v2
+
+          - name: Set up Java JDK 17
+            uses: actions/setup-java@v4.2.1
+            with:
+              java-version: '17'
+
+          - name: Build debug APK
+            run: ./gradlew assembleDebug --stacktrace
+
+          - name: Upload a Build Artifact
+            uses: actions/upload-artifact@v4.3.1
+            with:
+              name: sample-app.apk
+              path: app/build/outputs/apk/debug/app-debug.apk
