--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -48,7 +48,7 @@ jobs:
               distribution: 'adopt'
 
           - name: Build debug APK
-            run: ./gradlew assembleDebug --stacktrace
+            run: ./gradlew build
 
           - name: Upload a Build Artifact
             uses: actions/upload-artifact@v4.3.1
