--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -45,7 +45,7 @@ jobs:
         uses: ./gradlew test
 
       - name: Upload test report
-        uses: actions.upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: unit_test_report
           path: app/build/reports/test/testDebugUnitTest/
