--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -25,6 +25,10 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      # Set Current Date As Env Variable
+      - name: Set current date as env variable
+        run: echo "date_today=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
@@ -78,11 +82,13 @@ jobs:
           - name: Checkout the code
             uses: actions/checkout@v3
 
+
           - name: Set up Java JDK 17
             uses: actions/setup-java@v4.2.1
             with:
               java-version: '17'
-              distribution: 'adopt'
+              distribution: 'zulu' # See 'Supported distributions' for available options
+              cache: 'gradle'
 
           - name: Build debug APK
             run: ./gradlew build
