--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -35,6 +35,23 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Unit Test
+        run: ./gradlew testDebugUnitTest
+        continue-on-error: true # IMPORTANT: allow pipeline to continue to Android Test Report step
+
+      - name: Android Test Report
+        uses: asadmansr/android-test-report-action@v1.2.0
+
   debug-apk:
         name: Generate Debug APK
         runs-on: ubuntu-latest
