--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -50,7 +50,7 @@ jobs:
         continue-on-error: true # IMPORTANT: allow pipeline to continue to Android Test Report step
 
       - name: Android Test Report
-        uses: asadmansr/android-test-report-action@v1.2.0
+        uses: ranga/android-test-report-action@v1.2.0
 
   debug-apk:
         name: Generate Debug APK
@@ -58,7 +58,6 @@ jobs:
         steps:
           - name: Checkout the code
             uses: actions/checkout@v3
-
 
           - name: Set up Java JDK 17
             uses: actions/setup-java@v4.2.1
@@ -73,5 +72,5 @@ jobs:
           - name: Upload a Build Artifact
             uses: actions/upload-artifact@v4.3.1
             with:
-              name: sample-app.apk
+              name: kotlinBestPracticeApp.apk
               path: app/build/outputs/apk/debug/app-debug.apk
