lint results updated

--- a/.github/workflows/android-lint.yml
+++ b/.github/workflows/android-lint.yml
@@ -25,3 +25,9 @@ jobs:
       - name: Run Lint
         run: ./gradlew lint
         continue-on-error: false
+
+      - name: Upload html test report
+        uses: actions/upload-artifact@v3
+        with:
+            name: lint.html
+            path: app/build/reports/lint-results-debug.html
