--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -35,25 +35,27 @@ jobs:
           echo Add other actions to build,
           echo test, and deploy your project.
 
-  test:
+  unit-test:
+    name: Perform Unit Testing
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
+      - name: Checkout the code
+        uses: actions/checkout@v3
 
       - name: Unit Test
         run: ./gradlew testDebugUnitTest
         continue-on-error: true # IMPORTANT: allow pipeline to continue to Android Test Report step
 
-      - name: Android Test Report
-        uses: KotlinBestPractice/android-test-report-action@v1.2.0
+      - name: Upload test report
+        uses: actions.upload-artifact@v3
+        with:
+          name: unit_test_report
+          path: app/build/reports/test/testDebugUnitTest/
 
   debug-apk:
         name: Generate Debug APK
+        needs:
+          - unit-test
         runs-on: ubuntu-latest
         steps:
           - name: Checkout the code
