--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -39,8 +39,14 @@ jobs:
     name: Perform Unit Testing
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
 
       - name: Unit Test
         run: ./gradlew testDebugUnitTest
@@ -54,8 +60,6 @@ jobs:
 
   debug-apk:
         name: Generate Debug APK
-        needs:
-          - unit-test
         runs-on: ubuntu-latest
         steps:
           - name: Checkout the code
