--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -39,7 +39,8 @@ jobs:
     name: Perform Unit Testing
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout the code
+        uses: actions/checkout@v3
 
       - name: set up JDK 17
         uses: actions/setup-java@v3
@@ -53,7 +54,7 @@ jobs:
         continue-on-error: true # IMPORTANT: allow pipeline to continue to Android Test Report step
 
       - name: Upload test report
-        uses: actions.upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: unit_test_report
           path: app/build/reports/test/testDebugUnitTest/
