--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -118,16 +118,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: set up JDK 17
-        uses: actions/setup-java@v3
+
+      - name: Set up Java JDK 17
+        uses: actions/setup-java@v4.2.1
         with:
-          java-version: 17
+          java-version: '17'
+          distribution: 'zulu' # See 'Supported distributions' for available options
+          cache: 'gradle'
+
       - name: build release
-        run: ./gradlew assembleRelease
+        run: ./gradlew assembleDebug
       - name: upload artifact to Firebase App Distribution
         uses: wzieba/Firebase-Distribution-Github-Action@v1
         with:
           appId: ${{secrets.FIREBASE_APP_ID}}
           serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
           groups: testers
-          file: app/build/outputs/apk/release/app-release-unsigned.apk
+          file: app/build/outputs/apk/debug/app-debug.apk
