--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -123,7 +123,7 @@ jobs:
         uses: actions/setup-java@v4.2.1
         with:
           java-version: '17'
-          distribution: 'zulu' # See 'Supported distributions' for available options
+          distribution: 'zulu'
           cache: 'gradle'
 
       - name: build Debug APK
