--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -1,7 +1,12 @@
 name: On Pull Request
 
 on:
-
+  push:
+    branches:
+      - main
+      - development
+  pull_request:
+    branches: [ "main", "development" ]
   workflow_dispatch:
 
 jobs:
@@ -38,10 +43,43 @@ jobs:
         - lint
       uses: ./.github/workflows/unit-test.yml
 
+    build-debug-apk:
+      name: Debug Apk
+      needs:
+        - unit-test
+      uses: ./.github/workflows/build_debug_apk.yml
 
-    sonar-cloud:
-      name: SonarCloud Analysis
-      uses: ./.github/workflows/sonar-cloud.yml
+
+
+    sonar-code-analysis:
+      name: Build and analyze
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+          with:
+            fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+        - name: Set up JDK 17
+          uses: actions/setup-java@v3
+          with:
+            java-version: 17
+            distribution: 'zulu' # Alternative distribution options are available
+        - name: Cache SonarCloud packages
+          uses: actions/cache@v3
+          with:
+            path: ~/.sonar/cache
+            key: ${{ runner.os }}-sonar
+            restore-keys: ${{ runner.os }}-sonar
+        - name: Cache Gradle packages
+          uses: actions/cache@v3
+          with:
+            path: ~/.gradle/caches
+            key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+            restore-keys: ${{ runner.os }}-gradle
+        - name: Build and analyze
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          run: ./gradlew build sonar --info
 
     buildCD-pipeline:
       name: CD-pipeline
