--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -4,20 +4,16 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches:
-        - main
-        - development
+      - main
+      - development
   pull_request:
     branches: [ "main", "development" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -36,53 +32,30 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  
+  
+
+  lint:
+    name: Lint on Debug variant
+    needs:
+      - build
+    uses: ./.github/workflows/android-lint.yml
+
 
   unit-test:
-    name: Perform Unit Testing
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v3
+    name: Unit Test
+    needs:
+      - lint
+    uses: ./.github/workflows/unit-test.yml
 
-      - name: set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: gradle
+  build-debug-apk:
+    name: Debug Apk
+    needs:
+      - unit-test
+    uses: ./.github/workflows/build_debug_apk.yml
 
-      - name: Unit Test
-        run: ./gradlew testDebugUnitTest
-        continue-on-error: true # IMPORTANT: allow pipeline to continue to Android Test Report step
 
-      - name: Upload test report
-        uses: actions/upload-artifact@v3
-        with:
-          name: unit_test_report
-          path: app/build/reports/test/testDebugUnitTest/
 
-  debug-apk:
-        name: Generate Debug APK
-        runs-on: ubuntu-latest
-        steps:
-          - name: Checkout the code
-            uses: actions/checkout@v3
-
-          - name: Set up Java JDK 17
-            uses: actions/setup-java@v4.2.1
-            with:
-              java-version: '17'
-              distribution: 'zulu' # See 'Supported distributions' for available options
-              cache: 'gradle'
-
-          - name: Build debug APK
-            run: ./gradlew build
-
-          - name: Upload a Build Artifact
-            uses: actions/upload-artifact@v4.3.1
-            with:
-              name: kotlinBestPracticeApp.apk
-              path: app/build/outputs/apk/debug/app-debug.apk
   sonar-code-analysis:
     name: Build and analyze
     runs-on: ubuntu-latest
@@ -112,3 +85,28 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew build sonar --info
+
+
+  app-dist:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Java JDK 17
+        uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '17'
+          distribution: 'zulu'
+          cache: 'gradle'
+
+      - name: build Debug APK
+        run: ./gradlew assembleDebug
+      - name: upload artifact to Firebase App Distribution
+        uses: wzieba/Firebase-Distribution-Github-Action@v1
+        with:
+          appId: ${{secrets.FIREBASE_APP_ID}}
+          serviceCredentialsFileContent: ${{ secrets.CREDENTIAL_FILE_CONTENT }}
+          groups: testers
+          file: app/build/outputs/apk/debug/app-debug.apk
