signed apk to artifact

--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -117,7 +117,7 @@ jobs:
         uses: r0adkll/sign-android-release@v1
         id: sign
         with:
-          releaseDirectory: app/release
+          releaseDirectory: app/build/outputs/bundle/release
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
           alias: ${{ secrets.ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
@@ -128,4 +128,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: app
-          path: app/release/app-release.aab
+          path: app/build/outputs/bundle/release/app-release.aab
