--- a/.github/workflows/releaseCICD.yml
+++ b/.github/workflows/releaseCICD.yml
@@ -113,11 +113,19 @@ jobs:
     name: Build Release AAB
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Java JDK 17
+        uses: actions/setup-java@v4.2.1
+        with:
+            java-version: '17'
+            distribution: 'zulu'
+            cache: 'gradle'
+
       - name: Build
         run: ./gradlew build
       - name: Assemble Release Bundle
         run: |
               ./gradlew assembleRelease
+
       - name: Build Release AAB
         uses: r0adkll/sign-android-release@v1
         id: sign
