--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KotlinBestPractice"
+        android:theme="@style/Theme.SplashScreenAPI"
         tools:targetApi="31">
+        <activity
+            android:name=".movies.presentation.MovieDetailsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_movie_details"
+            android:theme="@style/Theme.SplashScreenAPI" />
         <activity
             android:name=".movies.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.KotlinBestPractice">
+            android:theme="@style/Theme.SplashScreenAPI">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
